--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -10,7 +10,7 @@ body
 	padding-bottom: 8px;
 }
 
-/* Patch for Edge */
+/* Patch for Edge, until they fix emojis in arial x.x */
 @supports (-ms-ime-align:auto) {
 .user_content { font-family: Segoe UI Emoji, arial; }
 }
@@ -21,27 +21,27 @@ ul
 {
 	padding-left: 0px;
 	padding-right: 0px;
-	height: 28px;
+	height: 36px;
 	list-style-type: none;
 	border: 1px solid #ccc;
 	background-color: white;
+	margin-bottom: 12px;
 }
 li
 {
-	height: 26px;
+	height: 35px;
 	padding-left: 10px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	font-weight: bold;
-	text-transform: uppercase;
+	padding-top: 8px;
+	padding-bottom: 8px;
 }
 li:hover { background: rgb(250,250,250); }
 li a
 {
 	text-decoration: none;
-	color: #515151;
+	/*color: #515151;*/
+	color: black;
+	font-size: 17px;
 }
-/*li a:hover { color: #7a7a7a; }*/
 .menu_left
 {
 	float: left;
@@ -56,25 +56,24 @@ li a
 }
 
 .menu_alerts {
-	padding-left: 7px;
+	/*padding-left: 7px;*/
+	font-size: 20px;
 	padding-top: 2px;
 	color: rgb(80,80,80);
 }
 .menu_alerts .alert_counter {
-	position:relative;
-	font-size: 9px;
-	top: -24px;
-	background-color: rgb(140,0,0);
+	position: relative;
+	font-size: 8px;
+	top: -25px;
+	background-color: rgb(190,0,0);
 	color: white;
-	padding: 3px;
 	width: 14px;
 	left: 10px;
 	line-height: 8px;
-	border-radius: 20px;
 	padding-top: 2.5px;
 	height: 14px;
-	opacity: 0.8;
 	text-align: center;
+	border: white solid 1px;
 }
 .menu_alerts .alert_counter:empty {
 	display: none;
@@ -94,7 +93,7 @@ li a
 }
 .selectedAlert .alertList {
 	position: absolute;
-	top: 43px;
+	top: 51px;
 	display: block;
 	background: white;
 	font-size: 10px;
@@ -127,6 +126,10 @@ li a
 	float: right;
 	width: calc(100% - 20px);
 	height: 30px;
+}
+.alertItem .text {
+	font-size: 10px;
+	font-weight: bold;
 }
 
 .container
@@ -186,7 +189,7 @@ li a
 	padding: 0px;
 	padding-top: 0px;
 	width: 100%;
-	margin-bottom: 8px;
+	margin-bottom: 12px;
 	overflow: hidden;
 	word-wrap: break-word;
 }
@@ -253,6 +256,7 @@ li a
 	color: black;
 }
 .rowitem a:hover { color: silver; }
+.top_post { margin-bottom: 12px; }
 .opthead { display: none; }
 
 .col_left
@@ -274,16 +278,8 @@ li a
 	font-weight: bold;
 	text-transform: uppercase;
 }
-.colitem.passive
-{
-	font-weight: normal;
-	text-transform: none;
-}
-.colitem a
-{
-	text-decoration: none;
-	color: black;
-}
+.colitem.passive { font-weight: normal; text-transform: none; }
+.colitem a { text-decoration: none; color: black; }
 .colitem a:hover { color: silver; }
 
 .formrow
@@ -298,11 +294,7 @@ li a
 	display: table;
 }
 .formrow:after { clear: both; }
-
-.formrow:not(:last-child)
-{
-	border-bottom: 1px dotted #ccc;
-}
+.formrow:not(:last-child) { border-bottom: 1px dotted #ccc; }
 
 .formitem
 {
@@ -368,11 +360,7 @@ button
 	border-width: 1px;
 	font-size: 15px;
 }
-button.username
-{
-	position: relative;
-	top: -0.25px;
-}
+button.username { position: relative; top: -0.25px; }
 .username.level { color: #303030; }
 .username.real_username { color: #404040; font-size: 17px; }
 .username.real_username:hover { color: black; }
@@ -480,33 +468,61 @@ button.username
 .next_button { right: 14px; }
 
 @media (max-width: 880px) {
-	li { height: 25px; font-size: 15px; padding-left: 7px; }
-	ul { height: 26px; margin-top: 8px; }
-	.menu_left { padding-right: 7px; }
-	.menu_right { padding-right: 7px; }
-	body { padding-left: 4px; padding-right: 4px; margin: 0px !important; width: 100% !important; height: 100% !important; overflow-x: hidden; }
+	li {
+		height: 29px;
+		font-size: 15px;
+		padding-left: 9px;
+		padding-top: 6px;
+		padding-bottom: 6px;
+	}
+	ul {
+		height: 30px;
+		margin-top: 8px;
+	}
+	.menu_left { padding-right: 9px; }
+	.menu_right { padding-right: 9px; }
+	.menu_alerts {
+		padding-left: 7px;
+		padding-right: 7px;
+		font-size: 18px;
+	}
+	
+	body {
+		padding-left: 4px;
+		padding-right: 4px;
+		margin: 0px !important;
+		width: 100% !important;
+		height: 100% !important;
+		overflow-x: hidden;
+	}
 	.container { width: auto; }
-	.selectedAlert .alertList { top: 33px; right: 4px; }
+	.selectedAlert .alertList { top: 37px; right: 4px; }
 }
 
 @media (max-width: 810px) {
-	li { font-weight: normal; text-transform: none; }
 	.rowitem { text-transform: none; }
 }
 
-@media (max-width: 620px) {
-	li
-	{
+@media (max-width: 680px) {
+	li {
 		padding-left: 5px;
-		padding-top: 2px;
+		padding-top: 3px;
 		padding-bottom: 2px;
-		height: 23px;
+		height: 25px;
 	}
-	ul { height: 24px; }
-	.menu_left { padding-right: 5px; }
-	.menu_right { padding-right: 5px; }
+	li a { font-size: 14px; }
+	ul { height: 26px; }
+	.menu_left { padding-right: 7px; }
+	.menu_right { padding-right: 7px; }
 	.menu_create_topic { display: none;}
-	.menu_alerts { padding-left: 4px; padding-right: 4px; }
+	
+	.menu_alerts {
+		padding-left: 4px;
+		padding-right: 4px;
+		font-size: 16px;
+		padding-top: 1px;
+	}
+	.selectedAlert .alertList { top: 33px; }
 	
 	.hide_on_mobile { display: none !important; }
 	.prev_button, .next_button { top: auto; bottom: 5px; }
@@ -515,12 +531,9 @@ button.username
 }
 
 @media (max-width: 470px) {
-	.menu_overview { display: none; }
-	.menu_profile { display: none; }
+	.menu_overview, .menu_profile { display: none; }
 	.hide_on_micro { display: none !important; }
-	.post_container {
-		overflow: visible !important;
-	}
+	.post_container { overflow: visible !important; }
 	.post_item {
 		background-position: 0px 2px !important;
 		background-size: 64px 64px !important;
@@ -550,4 +563,9 @@ button.username
 		text-align: center;
 	}
 	.container { width: 100% !important; }
+}
+
+@media (max-width: 330px) {
+	li { padding-left: 6px; }
+	.menu_left { padding-right: 6px; }
 }
