--- a/templates/topic_alt.html
+++ b/templates/topic_alt.html
@@ -2,6 +2,7 @@
 {{if gt .Page 1}}<div id="prevFloat" class="prev_button"><a class="prev_link" href="/topic/{{.Topic.ID}}?page={{subtract .Page 1}}">&lt;</a></div>{{end}}
 {{if ne .LastPage .Page}}<link rel="prerender" href="/topic/{{.Topic.ID}}?page={{add .Page 1}}" />
 <div id="nextFloat" class="next_button"><a class="next_link" href="/topic/{{.Topic.ID}}?page={{add .Page 1}}">&gt;</a></div>{{end}}
+
 <div class="rowblock topic_block">
 	<form action='/topic/edit/submit/{{.Topic.ID}}' method="post">
 		<div class="rowitem topic_item rowhead{{if .Topic.Sticky}} topic_sticky_head{{else if .Topic.Is_Closed}} topic_closed_head{{end}}">
@@ -18,6 +19,7 @@
 		</div>
 	</form>
 </div>
+
 <style type="text/css">.rowitem:last-child .content_container { margin-bottom: 5px !important; }</style>
 <div class="rowblock post_container" style="border-top: none;">
 	<div class="rowitem passive deletable_block editable_parent post_item" style="background-color: #eaeaea;padding-top: 4px;padding-left: 5px;clear: both;border-bottom: none;padding-right: 4px;padding-bottom: 2px;">
@@ -36,20 +38,24 @@
 				{{if .CurrentUser.Perms.PinTopic}}
 				{{if .Topic.Sticky}}<a href='/topic/unstick/submit/{{.Topic.ID}}' class="action_button">Unpin</a>{{else}}<a href='/topic/stick/submit/{{.Topic.ID}}' class="action_button">Pin</a>{{end}}{{end}}
 				<a href="/report/submit/{{.Topic.ID}}?session={{.CurrentUser.Session}}&type=topic" class="action_button report_item">Report</a>
-				{{/* Element Queries might help with having to use JS. Unfortunately, the W3C is taking a while with it */}}
+				{{/* Element Queries might help with having to use JS. Who knows when or *if* the W3C will standardise it */}}
 				{{if .CurrentUser.Perms.ViewIPs}}<a href="#" title="IP Address" class="action_button action_button_right ip_item hide_on_mobile">{{.Topic.IpAddress}}</a>{{end}}
 				{{if .Topic.LikeCount}}<a class="action_button action_button_right hide_on_micro">{{.Topic.LikeCount}} up</a>{{end}}
 			</div>
 		</div><div style="clear:both;"></div>
 	</div>
 	{{range .ItemList}}
-	<div class="rowitem passive deletable_block editable_parent post_item">
+	<div class="rowitem passive deletable_block editable_parent post_item {{if .ActionType}}action_item{{end}}">
 		<div class="userinfo">
 			<div class="avatar_item" style="background-image: url({{.Avatar}}), url(/static/white-dot.jpg);background-position: 0px -10px;">&nbsp;</div>
 			<a href="/user/{{.CreatedBy}}" class="the_name">{{.CreatedByName}}</a>
 			{{if .Tag}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag">{{.Tag}}</div><div class="tag_post"></div></div>{{else}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag post_level">Level {{.Level}}</div><div class="tag_post"></div></div>{{end}}
 		</div>
-		<div class="content_container">
+		<div class="content_container" {{if .ActionType}}style="margin-left: 0px;"{{end}}>
+			{{if .ActionType}}
+				<span class="action_icon" style="font-size: 18px;padding-right: 5px;">{{.ActionIcon}}</span>
+				<span>{{.ActionType}}</span>
+			{{else}}
 			<div class="editable_block user_content">{{.ContentHtml}}</div>
 			<div class="button_container">
 				{{if $.CurrentUser.Perms.LikeItem}}<a href="/reply/like/submit/{{.ID}}" class="action_button">+1</a>{{end}}
@@ -59,6 +65,7 @@
 				{{if $.CurrentUser.Perms.ViewIPs}}<a href="#" title="IP Address" class="action_button action_button_right ip_item hide_on_mobile">{{.IpAddress}}</a>{{end}}
 				{{if .LikeCount}}<a class="action_button action_button_right hide_on_micro">{{.LikeCount}} up</a>{{end}}
 			</div>
+			{{end}}
 		</div>
 		<div style="clear:both;"></div>
 	</div>
