--- a/themes/cosmo-conflux/public/main.css
+++ b/themes/cosmo-conflux/public/main.css
@@ -700,6 +700,15 @@ blockquote p
 	box-shadow:0 1px 2px rgba(0,0,0,.1);
 }
 
+.action_item .userinfo {
+	display: none;
+}
+.action_item .content_container {
+	min-height: auto;
+	padding: 15px;
+	text-align: center;
+}
+
 .prev_button, .next_button {
 	position: fixed;
 	top: 50%;
